[package]
name = "TF2classtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.22.0", features = ["wgpu"] }
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.164", features = ["serde_derive"] }
tokio = { version = "1.29.1", features = ["full"] }
